# Demo-trading-c-project

./: CMakeLists.txt  CMakeLists.txt.user.7991cf3  CMakeLists.txt.user.c37326d  MakingAPosition.cpp  MakingAPosition.h  api.cpp  mainappwindow.ui  mainappwindow.ui.autosave  project.cpp
demo-trading/: authorization.cpp  authorization.h  authorization.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  registration.cpp  registration.h  registration.ui
include/: MakingAPosition.h  api.h  sql.h
src/: MakingAPosition.cpp  api.cpp  frontend.cpp  main.cpp  sql.cpp
